syntax = "proto3";

package auth;

service AuthService {
  rpc RegisterUser (RegisterRequest) returns (AuthResponse);
  rpc LoginUser (LoginRequest) returns (AuthResponse);
}

message RegisterRequest {
  string full_name = 1;
  string username = 2;
  string dob = 3;
  string account_type = 4;
  string password = 5;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message Status {
  bool success = 1;
  string message = 2;
}

message AuthResponse {
  Status status = 1;
  User user = 2;
}

message User {
  string id = 1;
  string username = 2;
  string avatar = 3;
}